<resources>
    <string name="app_name" translatable="false">FindFootball</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_title_main" translatable="false">@string/app_name</string>
    <string name="activity_title_auth">Authorization</string>
    <string name="activity_title_find_game">Find Game</string>
    <string name="activity_title_create_game">Create Game</string>
    <string name="activity_title_email_sign_up">Sign Up</string>
    <string name="activity_title_game_info">Game</string>
    <string name="activity_title_profile">Profile</string>

    <string name="action_version" translatable="false">Version</string>

    <!-- === Navigation Drawer === -->
    <string name="nav_main_title" translatable="false">Debug</string>
    <string name="nav_find_game_title">Find Game</string>
    <string name="nav_upcoming_games_title">Upcoming Games</string>
    <string name="nav_nav_archived_games_title">Archived Games</string>
    <string name="nav_create_game_title">Create Game</string>
    <string name="nav_settings_title">Settings</string>


    <!-- === GMaps === -->
    <string name="gmaps_permissions_not_granted">Requiring Location permissions</string>
    <string name="gmaps_button_confirm_text">Confirm</string>


    <!-- === Auth === -->
    <string name="auth_required_re_authorization">Auth problem. Please sign in again</string>
    <string name="auth_activity_default_msg">Please log in</string>
    <string name="auth_activity_empty_email">Email cannot be empty!</string>
    <string name="auth_activity_empty_password">Password cannot be empty!</string>
    <string name="auth_activity_password_too_short">Password cannot be shorter than 6!</string>
    <string name="auth_activity_bad_email">Email must contain \'@\' !</string>
    <string name="auth_activity_hint_password">Password</string>
    <string name="auth_activity_hint_repeat_password">Repeat password</string>
    <string name="auth_activity_hint_email" translatable="false">Email</string>
    <string name="auth_activity_hint_name" translatable="false">Name</string>
    <string name="auth_activity_button_sign_in">Login</string>
    <string name="auth_activity_button_sign_up">Sign Up</string>
    <string name="auth_activity_msg_other_networks">Or</string>
    <string name="auth_activity_progress_dialog_title">In progress…</string>


    <!--- === Profile Activity === -->
    <string name="profile_activity_sign_out_btn_text">Sign Out</string>


    <!-- === Email Sign Up === -->
    <string name="su_email_frg_empty_email" translatable="false">Email cannot be empty!</string>
    <string name="su_email_frg_without_dog" translatable="false">Email cannot be without "@"!</string>
    <string name="su_email_frg_incorrect" translatable="false">Email incorrect!</string>
    <string name="su_password_frg_empty_password" translatable="false">Password cannot be empty!</string>
    <string name="su_password_frg_password_not_match" translatable="false">Passwords do not match!</string>
    <string name="su_password_frg_password_too_short" translatable="false">Password too short!</string>
    <string name="su_name_frg_too_short" translatable="false">Name to short!</string>
    <string name="su_name_frg_empty_name" translatable="false">Name cannot be empty!</string>
    <string name="su_fragment_email">Your email</string>
    <string name="su_fragment_name">Your name</string>
    <string name="su_fragment_password">Tape your password</string>
    <string name="su_fragment_name_small">For your friends</string>
    <string name="su_fragment_email_small">You will get verification letter</string>
    <string name="su_fragment_sex">Male or not?</string>
    <string name="su_fragment_sex_small">just a joke</string>
    <string name="su_fragment_dialog_title">Signing Up…</string>
    <string name="su_fragment_registration_failed">Registration failed! Please try again. (@error@)</string>
    <string name="su_fragment_check_email">Check your email please!</string>

    <!-- === Create Game  === -->
    <string name="cg_game_created_msg" formatted="false">%s has been created!</string>

    <string name="cg_game_title">Game title</string>
    <string name="cg_game_description">Game description</string>


    <string name="cg_game_title_frg_empty_title">Title cannot be empty!</string>
    <string name="cg_game_title_frg_too_short_title">The minimal title length %d!</string>

    <string name="cg_game_description_frg_hint">All info about event</string>
    <string name="cg_game_description_frg_empty_description">Description cannot be empty!</string>
    <string name="cg_game_description_frg_too_short_description">The minimal description length %d!</string>

    <string name="cg_game_location_frg_location_not_selected">Please, select game location!</string>

    <!-- Game Team Size -->
    <string name="cg_game_team_size_frg_main_text">Team Size</string>

    <!-- Game Time -->
    <string name="cg_game_time_frg_main_text">Game Time</string>
    <string name="cg_game_time_frg_time_offset_too_small" formatted="false">Minimal time offset: %d hours!</string>
    <string name="cg_game_time_frg_time_in_the_past">You can\'t create game in the past!</string>
    <string-array name="cg_game_time_frg_day_spinner_list">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Next week</item>
        <item>Other</item>
    </string-array>
    <string-array name="cg_game_time_frg_time_spinner_list">
        <item>10:00</item>
        <item>14:00</item>
        <item>19:00</item>
        <item>Other</item>
    </string-array>


    <!-- === My Games Activity === -->
    <string name="my_games_activity_title_archived_games">Archive</string>
    <string name="my_games_activity_title_upcoming_games">Upcoming</string>
    <string name="upcoming_games_fragment_no_data">Games not found</string>
    <string name="archived_games_fragment_no_data" translatable="false">@string/upcoming_games_fragment_no_data</string>


    <!-- === Find Game Activity === -->
    <string name="find_game_activity_no_more_data">No more data!</string>
    <string name="find_game_activity_no_data">Games not found!</string>
    <string name="find_game_activity_select_location">Select Location</string>


    <!-- === Game Info Activity === -->
    <string name="game_info_activity_tab_title_about">About</string>
    <string name="game_info_activity_tab_title_chat">Chat</string>
    <string name="game_info_activity_tab_title_players">Players</string>

    <!-- === Chat === -->
    <string name="type_message" translatable="false">Message</string>

    <!-- === Popup === -->
    <string name="popup_msg_coming_soon">Coming soon!</string>


    <!-- === Context Menu === -->
    <string name="context_menu_title">Select Action</string>
    <string name="context_menu_btn_cancel_title" translatable="false">@android:string/cancel</string>
    <string name="context_menu_btn_ok_title" translatable="false">@android:string/ok</string>
    <string name="context_menu_item_delete_title">Delete</string>
    <string name="cg_game_title_frg_hint">Everybody can see it</string>


</resources>
