<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single"
    >

    <group>
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_debug"
            android:title="@string/nav_main_title"
            />

        <item
            android:id="@+id/nav_find_game"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_find_game_title" />

        <item
            android:id="@+id/nav_upcoming_games"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_upcoming_games_title" />

        <item
            android:id="@+id/nav_archived_games"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/nav_nav_archived_games_title" />
        <item
            android:id="@+id/nav_create_game"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_create_game_title" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:enabled="false"
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_debug"
                android:title="Share"/>
        </menu>
    </item>

</menu>
